fix: pomodoro form on firefox overflows

--- a/css/pomodoro.css
+++ b/css/pomodoro.css
@@ -2,6 +2,7 @@
     background: rgba(239, 242, 246, 0.71);
     border-radius: 8px;
     margin-top: 35px;
+    min-width: 0px;
 }
 .pomodoro-container p{
     margin-top:0px;
